Remove commons-io dependency